<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.location.LocationDetailActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/details_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:titleMargin="8dp"
        app:buttonGravity="center_vertical"
        app:title="@string/tool_bar_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/details_tool_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/name_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="12dp"
                    tools:text="Nome"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/id_location_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/id"
                    android:textStyle="normal"
                    android:textSize="16sp"
                    android:layout_below="@id/name_location"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/id_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="20dp"
                    tools:text="1233445656"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_below="@id/id_location_title"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/type_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/type"
                    android:textStyle="normal"
                    android:textSize="16sp"
                    android:layout_below="@id/id_location"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="20dp"
                    tools:text="planeta"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_below="@id/type_title"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/dimension_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/dimension"
                    android:textStyle="normal"
                    android:textSize="16sp"
                    android:layout_below="@id/type"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/dimension"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="20dp"
                    tools:text="Dimension C-137"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_below="@id/dimension_title"
                    android:paddingBottom="24dp"
                    />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout >