<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.CharacterDetailActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/details_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:titleMargin="8dp"
        app:buttonGravity="center_vertical"
        app:title="@string/tool_bar_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/details_tool_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/character_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:srcCompat="@drawable/ic_armothy"
                />
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/name_character"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="12dp"
                    tools:text="Nome"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/race_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/race"
                    android:textStyle="normal"
                    android:textSize="16sp"
                    android:layout_below="@id/name_character"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/race"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="20dp"
                    tools:text="Humano"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_below="@id/race_title"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/status_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/status"
                    android:textStyle="normal"
                    android:textSize="16sp"
                    android:layout_below="@id/race"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="20dp"
                    tools:text="Vivo"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_below="@id/status_title"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/origin_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/origin"
                    android:textStyle="normal"
                    android:textSize="16sp"
                    android:layout_below="@id/status"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/origin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="20dp"
                    tools:text="Terra"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_below="@id/origin_title"
                    android:paddingBottom="24dp"
                    />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>